users/k8s/users-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
spec:
  replicas: 1 # Количество запущенных экземпляров вашего приложения
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          # ⚠️ Локальный образ, который мы соберем внутри окружения Minikube
          image: myorg/users-service:1.0
          imagePullPolicy: Never # Говорим K8s не искать образ в Docker Hub
          ports:
            - containerPort: 8092
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users-service # Должен совпадать с deploy.template.metadata.labels
  ports:
    - port: 8092
      targetPort: 8092
      # nodePort: 30091 # Приложение будет доступно по этому порту на IP-адресе Minikube, только для NodePort
      protocol: TCP
  type: ClusterIP # Если NodePort, то - Позволяет открыть порт приложения наружу для вашего ПК
