users/k8s/users-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-mongodb-deployment # 👈 Уникальное имя
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-mongodb # 👈 Своя метка
  template:
    metadata:
      labels:
        app: users-mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:7.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: users-mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: users-mongodb-service # 👈 DNS-имя для user-service приложения
spec:
  ports:
    - port: 27017
  selector:
    app: users-mongodb
