users/k8s/users-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: users-vs-external
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway # 👈 НАМЕРТВО СВЯЗЫВАЕМ С НАШИМ GATEWAY
  http:
    - match:
        - uri:
            prefix: /users # Если в адресе написано /tasks...
      route:
        - destination:
            host: users-service # ...то Istio шлет запрос на ваш K8s Service
            port:
              number: 80 # Внутренний порт вашего Java-приложения -
              # Ставим 80 (он должен строго совпадать с 'port:' из K8s Service)

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: users-vs-internal
spec:
  hosts:
    - users-service
  http:
    - match:
        - uri:
            prefix: /users # Если в адресе написано /tasks...
      route:
        - destination:
            host: users-service # ...то Istio шлет запрос на ваш K8s Service
            port:
              number: 80 # Внутренний порт вашего Java-приложения -
              # Ставим 80 (он должен строго совпадать с 'port:' из K8s Service)
